# OS

./: .gitignore  CMakeLists.txt  INT  MEMORY  Makefile  PORT  PROCMEM  bochsrc  disk  int  ioport  makefile  memory
boot/: boot.asm  head.asm  setup.asm
include/: macro.h  stdarg.h  string.h
include/asm/: io.h  system.h
include/linux/: head.h  kernel.h  mm.h  task.h  traps.h  tty.h
include/sys/: types.h
init/: main.c
kernel/: exception.c  gdt.c  idt.c  kernel.c  printk.c  task.c  traps.c  vsprintf.c
kernel/asm/: clock_handler.asm  interrupt_handler.asm  io.asm
kernel/chr_drv/: clock.c  console.c  keyboard.c
kernel/mm/: memory.c  mm_101012.c
lib/: string.c
oskernel/boot/: head.asm  setup.asm
oskernel/include/asm/: system.h
oskernel/include/linux/: head.h  kernel.h  mm.h  sched.h  task.h  traps.h  types.h
oskernel/init/: main.c
oskernel/kernel/: exception.c  gdt.c  idt.c  kernel.c  sched.c  task.c  traps.c
oskernel/kernel/asm/: clock_handler.asm  head.asm  interrupt_handler.asm
oskernel/kernel/chr_drv/: clock.c  console.c  keyboard.c
oskernel/mm/: malloc.c  memory.c  mm_101012.c
